2016-05-05 0.8.1 pre
Use the new SMELT rendering API.

2016-05-04 0.8.1 pre
Piano keyboard: first steps.

2016-05-03 0.8.0 beta
Finish option proxying for all types.
Add more options for the visualization plugin.
Bump version to 0.8.0.
Package the visualization plugin for debian.

2016-05-02 0.7.8 beta
Finally finished the option proxying infrastructure...

2016-05-01 0.7.8 beta
Give the visualization a clearer look...
Now highlights playing notes.
Avoid a crash in file reading.

2016-04-30 0.7.8 beta
Fixed a bug in RPN handling.

2016-04-29 0.7.8 beta
Update documentation.
Added two missing option proxy function...

2016-04-28 0.7.8 beta
List plugins in settings window.
Plugins can be disabled now.

2016-04-27 0.7.8 beta
Show file name in window title.
Handle pitch bend in visualization.
Handle mute and solo in the default visualization.
A little plugin sdk documentaion...
Remove stupid things.

2016-04-26 0.7.8 beta
Now the default visualization plugin works as expected.
Avoid null pointers in the API implementation.

2016-04-25 0.7.8 alpha
Plugin API now works correctly.
Port part of the old visualization code to the
new Plugin API.

2016-04-24 0.7.8 alpha
More implementation of plugin support.
Migrate channel activity indicator to the new
callback system.
Added a testing plugin.
Plugins are now loaded correctly.
However the plugin API is not working properly.

2016-04-23 0.7.8 alpha
Basic stubs for plugin support.

2016-04-22 0.7.2
Remove visualization stub in settings window.
Warn the user when an invalid file is loaded.
Discard fluidsynth warnings.
First stable version!

2016-04-21 0.7.2 beta
Minor change to the main window.
Added "click to copy" to the file information window.

2016-04-20 0.7.2 beta
UI refinements:
	Use Qt layouts in most of the dialogs.
	Allow seeking with a single click on the slider.
	Remove file extension from the file name on main window.
	Use QLCDNumber to display current polyphone.
Fixed two memory leaks.