@@ -14,18 +14,22 @@ TEMPLATE = lib
 DEFINES += VISUALIZATION_LIBRARY
 
 SOURCES += qmpvisualization.cpp \
-    extrasmeltutils.cpp \
-    qmpvirtualpiano3d.cpp
+	extrasmeltutils.cpp \
+	qmpvirtualpiano3d.cpp
 
 HEADERS += qmpvisualization.hpp \
-    extrasmeltutils.hpp \
-    qmpvirtualpiano3d.hpp
+	extrasmeltutils.hpp \
+	qmpvirtualpiano3d.hpp
 
 unix {
 	target.path = /usr/lib/qmidiplayer
 	DATADIR = $$PREFIX/share
 	INSTALLS += target res
 	QMAKE_CXXFLAGS += -pthread -fPIC
+	QMAKE_CXXFLAGS_RELEASE -= -O2
+	QMAKE_CXXFLAGS_RELEASE += -O3
+	QMAKE_LFLAGS_RELEASE -= -O1
+	QMAKE_LFLAGS_RELEASE += -O3
 	res.path = $$DATADIR/qmidiplayer/img
 	res.files += ../img/chequerboard.png
 }
