@@ -1,3 +1,10 @@
+2016-05-06 0.8.1 alpha
+Use new SMELT rendering API for notes drawing.
+Deinitialize classes in a correct order to avoid crashes.
+Add background image option.
+Add FPS-related options.
+Use QLineEdit instead of QPlainTextEdit for strings.
+
 2016-05-05 0.8.1 pre
 Use the new SMELT rendering API.
 
